# GymGo

./: Dockerfile  model.py  pyproject.toml  train.py
gym_go/: gogame.py  govars.py
gym_go/tests/: test_gogame.py
