[project]
name = "GymGo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "numpy<2.0.0",
    "pyglet>=2.1.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorflow>=2.18.0",
]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
]
